2016-12-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/78904
	* gcc.target/i386/pr78904-3.c: New test.

2016-12-27  Alexander Ivchenko  <alexander.ivchenko@intel.com>

	* gcc.target/i386/mpx/vla-trailing-1-lbv.c: New test.
	* gcc.target/i386/mpx/vla-trailing-1-nov.c: Ditto.
	* gcc.target/i386/mpx/vla-trailing-1-ubv.c: Ditto.

2016-12-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/78904
	* gcc.target/i386/pr78904-2.c: New test.

2016-12-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/78904
	* gcc.target/i386/pr78904-1.c: New test.

2016-12-23  Andre Vehreschild  <vehre@gcc.gnu.org>

	* gfortran.dg/class_assign_1.f08: New test.

2016-12-23  Toma Tabacu  <toma.tabacu@imgtec.com>

	* gcc.target/mips/oddspreg-2.c (dg-options): Remove dg-skip-if for
	-fno-fat-lto-objects and add the -ffat-lto-objects option, along with
	an explanation for its purpose.
	* gcc.target/mips/oddspreg-3.c (dg-options): Likewise.
	* gcc.target/mips/oddspreg-6.c (dg-options): Likewise.
	* gcc.target/mips/no-dsp-1.c: Add an explanation for the purpose of
	-ffat-lto-objects.
	* gcc.target/mips/pr54240.c: Likewise.
	* gcc.target/mips/r10k-cache-barrier-14.c: Likewise.
	* gcc.target/mips/soft-float-1.c: Likewise.

2016-12-22  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	* gcc.dg/gimplefe-20.c: New test-case.

2016-12-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* gcc.target/s390/litpool-str-1.c: New test.

2016-12-22  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/setmem_long-1.c: Use "s390_useable_hw".
	* gcc.target/s390/md/rXsbg_mode_sXl.c: Likewise.
	* gcc.target/s390/md/andc-splitter-1.c: Likewise.
	* gcc.target/s390/md/andc-splitter-2.c: Likewise.
	* lib/gcc-dg.exp (gcc-dg-runtest): Export torture_current_flags.
	* gcc.target/s390/s390.exp: Import torture_current_flags.
	(check_effective_target_s390_useable_hw): New.
	(check_effective_target_s390_z900_hw): New.
	(check_effective_target_s390_z990_hw): New.
	(check_effective_target_s390_z9_ec_hw): New.